<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#593C8C"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children_mathematics_learning_application"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#E6E8E4">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCompareNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            card:cardBackgroundColor="#C0CA33"
            card:cardCornerRadius="15dp"
            card:cardElevation="12dp">

            <!-- Inner Layout to Align Image and Text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/icon_for_comparing_numbers"
                    android:src="@drawable/compare" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/compare_numbers"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOrderNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            card:cardBackgroundColor="#C0CA33"
            card:cardCornerRadius="15dp"
            card:cardElevation="12dp">

            <!-- Inner Layout to Align Image and Text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/icon_for_comparing_numbers"
                    android:src="@drawable/sort" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/order_numbers"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardComposeNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            card:cardBackgroundColor="#C0CA33"
            card:cardCornerRadius="15dp"
            card:cardElevation="12dp">

            <!-- Inner Layout to Align Image and Text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/icon_for_comparing_numbers"
                    android:src="@drawable/compose" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/compose_numbers"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>