<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#593C8C"
    android:orientation="vertical">

    <!-- Logo Section -->
    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children_mathematics_learning_application"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Content Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#E6E8E4">

        <!-- Display the generated numbers -->
        <TextView
            android:id="@+id/txtGeneratedNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="12dp" />

        <!-- Ascending Order Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter numbers in Ascending Order:"
            android:textSize="20sp"
            android:textColor="#757575"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtAscending1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="1st num"
                android:inputType="text"
                android:padding="20dp"
                android:background="@android:drawable/editbox_background"
                android:textSize="18sp"
                android:importantForAccessibility="yes" />

            <EditText
                android:id="@+id/edtAscending2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="2nd num"
                android:inputType="text"
                android:padding="20dp"
                android:background="@android:drawable/editbox_background"
                android:textSize="18sp"
                android:importantForAccessibility="yes" />

            <EditText
                android:id="@+id/edtAscending3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="3rd num"
                android:inputType="text"
                android:padding="20dp"
                android:background="@android:drawable/editbox_background"
                android:textSize="18sp"
                android:importantForAccessibility="yes" />
        </LinearLayout>

        <!-- Descending Order Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter numbers in Descending Order:"
            android:textSize="20sp"
            android:textColor="#757575"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtDescending1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="1st num"
                android:inputType="text"
                android:padding="20dp"
                android:background="@android:drawable/editbox_background"
                android:textSize="18sp"
                android:importantForAccessibility="yes" />

            <EditText
                android:id="@+id/edtDescending2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="2nd num"
                android:inputType="text"
                android:padding="20dp"
                android:background="@android:drawable/editbox_background"
                android:textSize="18sp"
                android:importantForAccessibility="yes" />

            <EditText
                android:id="@+id/edtDescending3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="3rd num"
                android:inputType="text"
                android:padding="20dp"
                android:background="@android:drawable/editbox_background"
                android:textSize="18sp"
                android:importantForAccessibility="yes" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtStreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Streak: 0"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:importantForAccessibility="yes"/>


        <!-- Button to check the answer -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="yes" />

    </LinearLayout>
</LinearLayout>